# FastVector

./: .clang-format  .gitignore  CMakeLists.txt  FastVector.h  Main.cpp  README.md
src/: FastVector.h  Main.cpp
